# tradeclaw

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  LICENSE  Makefile  NOTICE  README.md  alembic.ini  config.yaml  config.yaml.example  github-open-source-quant-survey.md  hatch_build.py  install-win.ps1  install.ps1  install.sh  pyproject.toml  run_tests.py  skills-lock.json  tradeclaw.db  启动DoYouTrade.bat  安装DoYouTrade.bat
alembic/: env.py
docs/: agent-autonomy-design.md  design.md  dsa-feature-migration.md  e2e-testing.md  quant-survey-analysis-and-ai-agent-design.md  short-term-playbook.md
doyoutrade/: __init__.py  __main__.py  bootstrap.py  config.py  config_store.py  default_config.yaml  diagnostics.py  onboarding.py  terminal_menu.py  test_messages.py  version_info.py
examples/: vectorbt_macd_backtest.py  vectorbt_stockstats_backtest.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  test_api.js  test_kline.cjs  test_kline_layout.cjs  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.ts  vitest.config.ts  vitest.setup.ts
qmt-proxy/: .gitignore  AGENTS.md  Makefile  NOTICE  README.md  env.example  make.cmd  make.ps1  pyproject.toml  requirements.txt  run.py  start.py  test_fastapi_app.py  test_grpc_client.py  test_logging.py  xtquant_interfaces_analysis.txt
qmt-proxy/app/: __init__.py  config.py  config_store.py  dependencies.py  grpc_client.py  grpc_server.py  main.py  web_ui.py
qmt-proxy/app/grpc_services/: __init__.py  data_grpc_service.py  health_grpc_service.py  trading_grpc_service.py
qmt-proxy/app/models/: data_models.py  trading_models.py
qmt-proxy/app/routers/: config.py  data.py  diagnostics.py  health.py  trading.py  websocket.py
qmt-proxy/app/services/: data_service.py  subscription_manager.py  trading_manager.py  trading_service.py
qmt-proxy/app/utils/: diagnostics.py  exceptions.py  helpers.py  logger.py  xtdata_isolated.py  xtdata_worker.py  xttrader_diagnostics.py
qmt-proxy/docs/: HTTP_WEBSOCKET_API.md
qmt-proxy/docs/plans/: 2026-03-21-disable-dev-reload.md  2026-03-21-make-lifecycle-hardening.md
qmt-proxy/docs/superpowers/plans/: 2026-03-27-ma-crossover-realtime-quote-logging.md  2026-03-27-real-trading-query-and-prod-gated-execution.md
qmt-proxy/docs/superpowers/specs/: 2026-03-27-ma-crossover-realtime-quote-logging-design.md  2026-03-27-real-trading-query-and-prod-gated-execution-design.md
qmt-proxy/examples/: .env.example  README.md  ma_crossover_strategy.py  pyproject.toml
qmt-proxy/installer/: install.ps1  uninstall.ps1
qmt-proxy/licenses/: LICENSE-MIT-upstream
qmt-proxy/openspec/changes/add-ai-trading-agent-platform/: design.md  proposal.md  tasks.md
qmt-proxy/openspec/changes/add-ai-trading-agent-platform/specs/agent-control-channels/: spec.md
qmt-proxy/openspec/changes/add-ai-trading-agent-platform/specs/agent-execution-layer/: spec.md
qmt-proxy/openspec/changes/add-ai-trading-agent-platform/specs/agent-market-data-layer/: spec.md
qmt-proxy/openspec/changes/add-ai-trading-agent-platform/specs/agent-strategy-runtime/: spec.md
qmt-proxy/openspec/changes/add-multi-qmt-terminal-support/: proposal.md
qmt-proxy/openspec/changes/add-web-ui-for-subscriptions-and-data-query/: design.md  proposal.md  tasks.md
qmt-proxy/openspec/changes/add-web-ui-for-subscriptions-and-data-query/specs/market-data-web-ui/: spec.md
qmt-proxy/proto/: common.proto  data.proto  trading.proto
qmt-proxy/scripts/: generate_proto.py  make.helpers.ps1  make.ps1  sync_xtquant.py
qmt-proxy/tests/: README.md  __init__.py  conftest.py  pytest.ini
qmt-proxy/tests/examples/: test_ma_crossover_strategy.py
qmt-proxy/tests/grpc/: QUICKREF.md  README.md  __init__.py  client.py  config.py  conftest.py  pytest.ini  test_data_grpc_service.py  test_health_grpc_service.py  test_subscription_grpc.py  test_trading_grpc_service.py
qmt-proxy/tests/rest/: README.md  __init__.py  client.py  config.py  conftest.py  test_data_api.py  test_health_api.py  test_subscription_api.py  test_trading_api.py
qmt-proxy/tests/sdk/: conftest.py  test_client.py  test_data_api.py  test_http_transport.py  test_packaging.py  test_system_api.py  test_trading_api.py  test_ws.py
qmt-proxy/tests/unit/: test_auth_api.py  test_config_api.py  test_config_multiclient.py  test_config_store.py  test_data_source_selection.py  test_diagnostics.py  test_diagnostics_multiclient.py  test_logger_client_tag.py  test_make_dev_encoding.ps1  test_make_helpers.ps1  test_make_start_args.ps1  test_pyproject_packaging.py  test_run.py  test_trading_manager.py  test_trading_routing_api.py  test_trading_service.py  test_trading_service_syntax.py  test_web_toolchain_versions.py  test_web_ui.py  test_xtdata_isolated.py  test_xtdata_worker.py  test_xttrader_diagnostics.py
qmt-proxy/web/: README.md  package-lock.json  package.json  vite.config.ts
qmt-proxy/web/src/: App.css  App.tsx  index.css  main.tsx  types.ts
qmt-proxy/web/src/components/: ConnectionSettings.tsx  MarketQueryWorkspace.test.tsx  MarketQueryWorkspace.tsx  StreamWorkspace.test.tsx  StreamWorkspace.tsx  SubscriptionsWorkspace.test.tsx  SubscriptionsWorkspace.tsx
qmt-proxy/web/src/test/: render.tsx  setup.ts
qmt_proxy_sdk/: README.md  __init__.py  client.py  data.py  exceptions.py  http.py  pyproject.toml  system.py  trading.py  ws.py
qmt_proxy_sdk/models/: __init__.py  data.py  system.py  trading.py
scripts/: backtest_accel_rebound.py  backtest_pullback_regime_matrix.py  backtest_window_experiment.py  feishu_card_smoke.py  migrate_factor_strategy_module_paths.py  scan_quant_repos.py  sync_gitee_release.py  write_windows_bats_gbk.py
tests/: _tool_result_helpers.py  scripted_model.py  test_account_statement.py  test_adjust_poison_cleanup.py  test_agent_repository.py  test_agent_runtime.py  test_agent_service.py  test_akshare_etf_bars.py  test_akshare_intraday_bars.py  test_akshare_realtime_provider.py  test_akshare_silencing.py  test_alembic_idempotent_rename.py  test_api_app.py  test_api_skill_paths.py  test_api_skills.py  test_approval_queue.py  (+238 more)
(+854 files in other folders)
