[project]
name = "tradeclaw"
version = "0.1.0"
description = "Multi-agent trading platform"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.15.2",
    "fastapi>=0.115.0",
    "greenlet>=3.0.0",
    "httpx>=0.28.1",
    "langchain-anthropic>=0.3.7",
    "langchain-core>=0.3.30",
    "langchain-openai>=0.3.7",
    "opentelemetry-api>=1.30.0",
    "opentelemetry-sdk>=1.30.0",
    "opentelemetry-instrumentation-fastapi>=0.51b0",
    "opentelemetry-instrumentation-logging>=0.51b0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.0",
    "sqlalchemy>=2.0.39",
    "uvicorn>=0.30.0",
    "websocket-client>=1.8.0",
    "websockets>=16.0",
]

[project.scripts]
tradeclaw = "tradeclaw.api.server:main"

[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tradeclaw", "qmt_proxy_sdk"]
