[project]
name = "doyoutrade"
version = "0.1.0"
description = "Multi-agent trading platform"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.15.2",
    "apscheduler>=3.11.0,<4",
    "fastapi>=0.115.0",
    "python-multipart>=0.0.20",
    "greenlet>=3.0.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.0",
    "langchain-core>=0.3.0",
    "lmstudio>=1.5.0",
    "anthropic>=0.40.0",
    "openai>=1.68.0",
    "opentelemetry-api>=1.30.0",
    "opentelemetry-sdk>=1.30.0",
    "opentelemetry-instrumentation-fastapi>=0.51b0",
    "opentelemetry-instrumentation-logging>=0.51b0",
    "pandas>=2.2.0",
    "pydantic>=2.12.5",
    "pypinyin>=0.53.0",
    "pyyaml>=6.0.0",
    "ruamel.yaml>=0.18",
    "sqlalchemy>=2.0.39",
    "stockstats>=0.6.0",
    "uvicorn>=0.30.0",
    "websocket-client>=1.8.0",
    "websockets>=16.0",
    "akshare>=1.18.52",
    "asyncpg>=0.31.0",
    "baostock>=0.9.1",
    "lark-oapi>=1.4.0",
    "click>=8.1.0",
    "python-socks[asyncio]>=2.8.1",
    "tushare>=1.4.29",
]

[project.scripts]
doyoutrade = "doyoutrade.api.server:main"
doyoutrade-cli = "doyoutrade.cli:main"

[project.optional-dependencies]
# Bundle the qmt-proxy server so `doyoutrade --mode both` (Windows default) can
# run it in-process. xtquant is Windows-only (it drives the QMT terminal), so
# it is marked accordingly — installing this extra off-Windows pulls the REST /
# gRPC stack only, and qmt-proxy then runs in mock/degraded mode.
qmt-proxy = [
    "xtquant>=250516.1.1,<250517.0.0; sys_platform == 'win32'",
    "grpcio>=1.76.0",
    "grpcio-reflection>=1.76.0",
    "protobuf>=6.33.0",
    "loguru>=0.7.3",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.2.1",
    "ruamel.yaml>=0.18",
]
# mootdx (a maintained pytdx fork) drives the 通达信 data provider — an offline
# alternative to QMT for OHLCV / minute bars / realtime L1 snapshots. mootdx
# 0.11.7 declares ``httpx>=0.25,<0.26``, but that bound is cosmetic: its quotes /
# xdxr path speaks the raw 通达信 socket protocol and never touches httpx (only
# the财报-download helpers we do not use do). The ``[tool.uv] override-dependencies``
# below relaxes that single upper bound to the project's httpx so the extra
# resolves; verified that bars / xdxr / quotes work on httpx 0.28.
mootdx = [
    "mootdx>=0.11.7",
]
examples = [
    "vectorbt>=0.26.0",
]
doc-processing = [
    "pypdfium2>=4.0.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "python-pptx>=1.0.0",
    "rapidocr-onnxruntime>=1.3.0",
]
# Report rendering + email delivery. md2img renders Markdown→HTML (``markdown``)
# →PNG via Playwright headless Chromium (run ``playwright install chromium`` once);
# ``aiosmtplib`` powers the async SMTP email push channel. All imported lazily,
# so the core app runs without this extra (image/email degrade to a structured
# "unavailable" fallback rather than crashing).
report = [
    "markdown>=3.5",
    "playwright>=1.40",
    "aiosmtplib>=3.0",
]

[tool.uv]
# mootdx pins httpx<0.26 and (via tdxpy) an older tenacity, but both bounds are
# cosmetic for the socket-based quotes/xdxr/bars path we use. Override them to
# the project's versions so ``doyoutrade[mootdx]`` resolves WITHOUT rippling a
# downgrade (httpx / tenacity) onto the rest of the app. Verified: bars / xdxr /
# quotes work on httpx 0.28 + tenacity 9.
override-dependencies = ["httpx>=0.28.1", "tenacity>=9.1.4"]

[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["doyoutrade", "qmt_proxy_sdk"]

# Alembic lives at the repo root (outside the package) but must ship inside the
# wheel so ``doyoutrade`` can migrate after a plain ``pip install`` / ``uvx``
# where the repo root does not exist. runtime_state._alembic_base() locates
# this copy at doyoutrade/_migrations/.
[tool.hatch.build.targets.wheel.force-include]
"alembic" = "doyoutrade/_migrations/alembic"
"alembic.ini" = "doyoutrade/_migrations/alembic.ini"

# frontend/dist is a build artifact (may be absent in a fresh git checkout), so
# it is force-included conditionally by the custom build hook below rather than
# statically here — a missing static force-include would fail the whole build.
[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[dependency-groups]
dev = []
