[project]
name = "qmt-proxy"
version = "0.1.0"
description = "REST/gRPC/WebSocket proxy for the QMT (miniQMT) xtquant SDK"
authors = [{ name = "renjiegod" }]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi (>=0.121.0,<0.122.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "ruamel.yaml (>=0.18,<0.19)",
    "grpcio (>=1.76.0,<2.0.0)",
    "grpcio-tools (>=1.76.0,<2.0.0)",
    "protobuf (>=6.33.0,<7.0.0)",
    "grpcio-reflection (>=1.76.0,<2.0.0)",
    "xtquant (>=250516.1.1,<250517.0.0)",
    "websockets (>=15.0)",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=1.0.0",
    "opentelemetry-api>=1.30.0",
]

[tool.uv]
python-preference = "managed"

[[tool.uv.index]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true

[tool.poetry]
packages = [{ include = "app" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
priority = "primary"

# poetry add fastapi uvicorn[standard] pydantic pydantic-settings python-multipart python-dotenv httpx loguru PyYAML grpcio grpcio-tools protobuf grpcio-reflection xtquant
